EA-2740: Retry ScheduledTasks when failures occur